# wayfire-shadows

./: .gitignore  INIReader.h  LICENSE  README.md  deco-button.cpp  deco-button.hpp  deco-icontheme.cpp  deco-icontheme.hpp  deco-layout.cpp  deco-layout.hpp  deco-shadow.cpp  deco-shadow.glsl.cpp  deco-shadow.hpp  deco-subsurface.cpp  deco-subsurface.hpp  deco-theme.cpp  deco-theme.hpp  decoration.cpp  meson.build  node.cpp  node.hpp  renderer.cpp  renderer.hpp  shaders.glsl.cpp  shadow-surface.cpp  shadow-surface.hpp  shadows.cpp  windecor.xml  winshadows.cpp  winshadows.xml
testconfig/: bluelight.ini  circular.ini  decoborder.ini  decorated.ini  gaussian.ini  glow.ini  minimal.ini  overscale.ini  square.ini
